--- a/package.json
+++ b/package.json
@@ -6,32 +6,35 @@
   "nativescript": {
     "id": "com.magpi.nsapp",
     "tns-ios": {
-      "version": "4.1.1"
+      "version": "4.2.0"
+    },
+    "tns-android": {
+      "version": "4.2.0"
     }
   },
   "dependencies": {
-    "@angular/animations": "~6.0.0",
-    "@angular/common": "~6.0.0",
-    "@angular/compiler": "~6.0.0",
-    "@angular/core": "~6.0.0",
-    "@angular/forms": "~6.0.0",
-    "@angular/http": "~6.0.0",
-    "@angular/platform-browser": "~6.0.0",
-    "@angular/platform-browser-dynamic": "~6.0.0",
-    "@angular/router": "~6.0.0",
-    "nativescript-angular": "~6.0.0",
-    "nativescript-theme-core": "~1.0.4",
-    "reflect-metadata": "~0.1.8",
-    "rxjs": "~6.1.0",
-    "tns-core-modules": "~4.1.0",
+    "@angular/animations": "~6.1.0",
+    "@angular/common": "~6.1.0",
+    "@angular/compiler": "~6.1.0",
+    "@angular/core": "~6.1.0",
+    "@angular/forms": "~6.1.0",
+    "@angular/http": "~6.1.0",
+    "@angular/platform-browser": "~6.1.0",
+    "@angular/platform-browser-dynamic": "~6.1.0",
+    "@angular/router": "~6.1.0",
+    "nativescript-angular": "^6.1.0",
+    "nativescript-theme-core": "1.0.4",
+    "reflect-metadata": "^0.1.12",
+    "rxjs": "^6.0.0",
+    "tns-core-modules": "^4.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "~6.1.0-rc.0",
-    "@ngtools/webpack": "~6.1.0-rc.2",
-    "nativescript-dev-typescript": "~0.7.0",
-    "nativescript-dev-webpack": "^0.15.0",
-    "tns-platform-declarations": "^4.1.0",
+    "@angular/compiler-cli": "6.1.0-rc.0",
+    "@ngtools/webpack": "6.1.0-rc.2",
+    "nativescript-dev-typescript": "0.7.0",
+    "nativescript-dev-webpack": "^0.16.2",
+    "tns-platform-declarations": "^4.2.1",
     "typescript": "~2.7.2"
   }
 }
